tests/type_errors/map_insert_wrong_value_type.nos
# expect_error: mismatch
# Map.insert should reject wrong value type when map type is known
main() = {
  m: Map[String, Int] = Map.fromList([("a", 1)])
  Map.insert(m, "b", "two")
}
